tests/neg-custom-args/captures/uses.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/uses.scala:8:17 ------------------------------------------
8 |  val _: D^{y} = d // error
  |                 ^
  |                 Found:    (d : D^{x, y})
  |                 Required: D^{y}
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/uses.scala:9:13 ------------------------------------------
9 |  val _: D = d // error
  |             ^
  |             Found:    (d : D^{x, y})
  |             Required: D
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/uses.scala:13:22 -----------------------------------------
13 |  val _: () -> Unit = f // error
   |                      ^
   |                      Found:    (f : () ->{x, y} Unit)
   |                      Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/uses.scala:19:28 -----------------------------------------
19 |  val _: () -> () -> Unit = g // error
   |                            ^
   |                            Found:    () ->{x, y} (ex$7: caps.Exists) -> () ->{y} Unit
   |                            Required: () -> () -> Unit
   |
   | longer explanation available when compiling with `-explain`
